# Borea

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PinkLady.py  README.md  README_borea_lib.md  README_calc_onept_image.md  README_calc_onept_world.md  README_calc_pt_image_opk.md  README_calc_pt_world_opk.md  README_docker.md  README_opk_control.md  README_opk_to_conical.md  README_opk_to_opk.md  README_opk_to_rpc.md  README_pt_image_to_world.md  README_pt_world_to_image.md  README_ptfile_image_to_world.md  README_ptfile_world_to_image.md  README_python_lib.md  README_spaceresection_opk.md  calc_onept_image.py  calc_onept_world.py  calc_pt_world_opk.py  environment.yml  opk_control.py  opk_to_conical.py  opk_to_opk.py  opk_to_rpc.py  pink_lady.py  pt_image_to_world.py  pt_world_to_image.py  ptfile_image_to_world.py  ptfile_world_to_image.py  pyproject.toml  requirements.txt  spaceresection_opk.py
borea_dependency/: environment-dev.yml  environment.yml  requirements-dev.txt  requirements.txt
borea_tools/: docker_help.py  opk_control.py  opk_to_conl.py  opk_to_opk.py  opk_to_rpc.py  pt_image_to_world.py  pt_world_to_image.py  ptfile_image_to_world.py  ptfile_world_to_image.py  spaceresection_opk.py  transform_proj_points.py
ci/: test.sh  test_all.sh  test_approx_proj.sh  test_changedim.sh  test_checkargsopk.sh  test_checkargspt.sh  test_checkarray.sh  test_checkheader.sh  test_checkheadpt.sh  test_checkorderaxe.sh  test_conical.sh  test_conl.sh  test_conversion.sh  test_conversionz.sh  test_copointspos.sh  test_dem.sh  test_dtm.sh  test_euclideanproj.sh  test_example.sh  test_func.sh  test_geodesy.sh  test_imageworldshot.sh  test_imageworldwork.sh  test_local_proj.sh  test_managereader.sh  test_projengine.sh  test_reader.sh  test_readercamera.sh  test_readercopoints.sh  test_readergcp.sh  test_readergipoints.sh  test_readeropk.sh  test_readfilept.sh  test_rpc.sh  test_searchproj.sh  test_shot.sh  test_shotpos.sh  test_spaceresection.sh  test_statistics.sh  test_struct.sh  (+10 more)
code/: PinkLady.py  Reader.py  Shot.py  Worksite.py  Writer.py  reader.py  shot.py  worksite.py  writer.py
dataset/: Camera1.txt  Camera2.txt  GCP_test.app  liaisons_test.mes  proj.json  terrain_test0.mes
dependency/: environment.yml  requirements.txt
docs/: code.rst  conf.py  index.rst  modules.rst  pink_lady.rst  src.datastruct.rst  src.format.rst  src.geodesy.rst  src.math.rst  src.parser.parser_format.rst  src.parser.parser_func.rst  (+7 more)
(+822 files in other folders)
